--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,13 +21,9 @@ jobs:
          node-version: '22'
 
       - name: Install Dependencies
-        run: | 
-         cd backend
-         npm install
+        run: npm install
 
       - name: Run tests
-        run: |
-         cd backend
-         npm test
+        run: npm test
 
      
